tests/baselines/reference/implementClausePrecedingExtends.errors.txt
==== tests/cases/compiler/implementClausePrecedingExtends.ts (1 errors) ====
    class C { foo: number }
    class D implements C extends C { }
                         ~~~~~~~~~
!!! implementClausePrecedingExtends.ts(2,22): error TS1025: 'extends' clause must precede 'implements' clause.